# pyeml

./: README.md  eml.py  pyproject.toml
.github/workflows/: tests.yml
src/pyeml/: __init__.py  _api.py  _cli.py  _compiler.py  _config.py  _operator.py  _symbolic.py  _trainer.py  _tree.py
tests/: conftest.py  test_api.py  test_compiler.py  test_operator.py  test_trainer.py  test_tree.py
